--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,31 @@ body{
   font-size: 1.6rem;
   font-family: "Lato", sans-serif;
 }
+
+.alerta-error{
+  background-color: red;
+  padding: .6rem;
+  color: #f5f5f5;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+.actividad{
+  margin-top: 2.9rem;
+  margin-left: 4rem;
+  background-color: #f5f5f5;
+  border-radius: .6rem;
+  width: 25rem;
+}
+
+.actividad p{
+  padding: .3rem;
+  font-weight: bold;
+  margin-left: 1.5rem;
+}
+
+.actividad p span{
+  font-weight: normal;
+  margin-left: 1rem;
+}
