--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,8 @@ body{
 }
 
 .actividad{
-  margin-top: 2.9rem;
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
   margin-left: 4rem;
   background-color: #f5f5f5;
   border-radius: .6rem;
@@ -43,7 +44,7 @@ body{
 }
 
 .actividad p{
-  padding: .3rem;
+  padding-top: .5rem;
   font-weight: bold;
   margin-left: 1.5rem;
 }
@@ -52,3 +53,10 @@ body{
   font-weight: normal;
   margin-left: 1rem;
 }
+
+.btn{
+  margin: .5rem 1.3rem;
+  width: 90%;
+  font-weight: bold;
+}
+
